test/Test/Compile/Error/DatasetErrors/tooBigFin.vcl
-- Test provide a reference to a dataset with number >= 3 in it.
dataset trainingDataset : Tensor (Index 3) [4]